@@ -5,6 +5,9 @@ What's New for OpenJPIP
 ! : changed
 + : added
 
+July 5, 2011
+! [kaori] changed parameter and file names regarding JPT-stream to JPIP-stream, which handles also JPP-stream
+
 May 26, 2011
 ! [antonin] changed Makefile to Makefile.nix to avoid having autotools overwrite them.
 
